<resources>
    <string name="app_name">Kassenzettelverwaltung 1.00 </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="neuer_kassenzettel">Neuer Kassenzettel</string>
    <string name="kassenzettel_loeschen">Kassenzettel löschen</string>
    <string name="title_activity_kassenzettelerfassen">Neuen Kassenzettel erfassen</string>
    <string name="Beschreibung_Kassenzettelerfassung">Bitte erfassen Sie die nachfolgenden Daten:</string>
    <string name="lbl_erfasser">Erfasser:</string>
    <string name="lbl_zweck">Verwendungszweck:</string>
    <string name="lbl_datum">Datum:</string>
    <string name="lbl_saldo">Saldo:</string>
    <string name="btn_erfassen">Erfassen</string>
</resources>
